web/style.css
body {
    overflow-y: hidden;
    overflow-x: hidden;
    background-color: #F7F8F1;
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    align-content: center;

    
}
h1 {
    color: #FFC040;
    text-align: center;
    background-color: black;


}
h2 {
    color: #FFC040;
    text-align: center;
    background-color: black;


}
h3 {
    color: #FFC040;
    text-align: center;
    background-color: black;
  
}
p {
    color: white;
    font-size: 1.3em;
    background-color: black;

    

}
ul {
    color: #FFC040;
    font-size: 1.3em;
    background-color: rgba(00, 00, 00, 1);
    



}
li {
    text-align: justify;
 
    

}
div {
    height:98vh;
    overflow-y: scroll;
    height: 600px;
    width: 800px;
   

}
.cover {
    background: url("resize_front-cover-2.jpg");
    background-repeat: no-repeat;
    background-size: 800px, 800px;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;

    
   

}
.open {
    background: url("resize_open-book-2.jpg");
    background-repeat: no-repeat;
     background-size: 800px, 800px;
    display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;
   


}
.closed {
    background: url("resize_back-cover-2.jpg");
    background-repeat: no-repeat;
  background-size: 790px, 900px;
     display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: auto;
  order: 0;
  
}
.menu {
    position: relative;
    transform: rotate(90deg);
    font-size: 1.5em;
    text-align: center;
    background-color: orange;
  display: block;
  flex-grow: 0;
  flex-shrink: 1;
  flex-basis: auto;
  align-self: center;
  order: 2;
    

}
a:link {
    color: gold;
}
a:visited {
    color: white;
}

